--- a/template/default/global.css
+++ b/template/default/global.css
@@ -108,7 +108,8 @@ ul#topnav .sub ul li a:hover {color:#148FC8; }
 .position .right{float:right;}
 
 .pro_box_top {background: #ededed none repeat scroll 0 0; height: 40px; width: 100%;}
-.pro_box_top_lt {font-weight:bold;color: #000;font-size: 20px;height: 40px;line-height: 40px;text-indent: 12px;width: 400px;}
+.pro_box_top_lt {font-weight:bold;color: #000;font-size: 20px;height: 40px;line-height: 40px;text-indent: 12px;}
+.pro_box_top_desc {font-weight:bold;color: #fff;font-size: 20px;height: 40px;line-height: 40px;text-indent: 12px; background:#00a0e9 ;width:120px}
 /********首页样式********/
 
 #index_main{margin:0 auto; width:966px; height:265px;}
