--- a/template/default/productlist.htm
+++ b/template/default/productlist.htm
@@ -24,11 +24,8 @@ _background:url(images/banner-btn-ie6.png) 0 0 no-repeat;
 
 <div class="banner"> 
    <div class="bd"> 
-    <ul style="position: relative; width: 1205px; height: 586px;"> 
-     <li style="background: url(/uploadfile/attachment/201612/1482553132_54_1217.jpg) no-repeat scroll center 0px;background-size: 100% 594px position: absolute; left: 0px; top: 0px; display: none;"><a target="_blank" href="http://www.superslide2.com/"></a></li> 
-     <li style="background: url(&quot;images/banner2.jpg&quot;) no-repeat scroll center 0px; position: absolute;background-size: 100% 594px width: 1920px; left: 0px; top: 0px; display: none;"><a target="_blank" href="http://www.superslide2.com/"></a></li> 
-     <li style="background: url(&quot;images/banner3.jpg&quot;) no-repeat scroll center 0px; position: absolute;background-size: 100% 594px width: 1920px; left: 0px; top: 0px; display: list-item;"><a target="_blank" href="http://www.superslide2.com/"></a></li> 
-     <li style="background: url(&quot;images/banner4.jpg&quot;) no-repeat scroll center 0px; position: absolute;background-size: 100% 594px width: 1920px; left: 0px; top: 0px; display: none;"><a target="_blank" href="http://www.superslide2.com/"></a></li> 
+    <ul style="position: relative; width: 1205px; height: 586px;">
+    {$probannerad}
     </ul> 
    </div> 
    <div class="hd">
