--- a/template/default/main.htm
+++ b/template/default/main.htm
@@ -16,6 +16,19 @@ print <<<EOT
 
 <div class="main1"></div>
 <div class="main2 index_main">
+
+
+	<div class="news_pro_list">
+	<ul>
+			{$webcore->getHomeProCates()}
+    	
+				
+                    
+    </ul>
+</div>
+
+
+
 	<table class="main_table">
 	<tr class="titletr">
 		<td width="33%">{$_LANG['main.news']}</td><td width="37%">{$_LANG['main.intro']}</td><td width="30%">{$_LANG['main.products']}</td>
